# citation-checker

./: .gitignore  LICENSE  README.md  main.bib  paper.bib  pyproject.toml
citation_checker/: checker.py  classifier.py  fuzzy.py  http_client.py  main.py  models.py  parser.py  pdf_parser.py  reporter.py  utils.py
citation_checker/verifiers/: _matching.py  arxiv.py  crossref.py  openalex.py  semanticscholar.py  web.py
tests/: test_classifier.py  test_fuzzy.py  test_parser.py  test_pdf_parser.py  test_semanticscholar.py  test_verifiers.py  test_web_verifier.py
tests/fixtures/: sample.bib
