[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "citation-checker"
version = "1.0.0"
description = "Deterministic bibliography verifier for .bib files"
requires-python = ">=3.11"
dependencies = [
    "bibtexparser>=1.4",
    "pymupdf>=1.23",
    "httpx>=0.27",
    "rapidfuzz>=3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
citation-checker = "citation_checker.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["citation_checker*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
