[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "citation-checker"
version = "1.0.2"
description = "Deterministic bibliography verifier for .bib files and PDFs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Adam Lechowicz", email = "alechowicz@umass.edu" },
]
keywords = ["bibliography", "citation", "bibtex", "pdf", "academic", "latex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "bibtexparser>=1.4",
    "pymupdf>=1.23",
    "httpx>=0.27",
    "rapidfuzz>=3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/adamlechowicz/citation-checker"
"Bug Tracker" = "https://github.com/adamlechowicz/citation-checker/issues"

[project.scripts]
citation-checker = "citation_checker.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["citation_checker*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: real-PDF corpus regression tests (run with `pytest -m slow`)",
]
addopts = "-m 'not slow'"
